--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,45 @@
-name: Build and Push Docker Image
+name: Build and Deploy
 
 on:
   push:
     branches:
-      - main
+      - main  # Trigger CI/CD on push to main branch
+  pull_request:
+    branches:
+      - main  # Trigger CI/CD on pull requests to the main branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository code
-      - name: Check out repository
-        uses: actions/checkout@v2
+    # Step 1: Checkout the code
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      # Log in to Docker Hub using the secrets
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    # Step 2: Set up Docker Buildx
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-      # Build the Docker image
-      - name: Build Docker image
-        run: |
-          docker build -t your-image-name .
+    # Step 3: Log in to DockerHub
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Push the Docker image to Docker Hub
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker push your-image-name
+    # Step 4: Build the Docker image
+    - name: Build Docker image
+      run: |
+        docker build -t yourusername/yourapp:${{ github.sha }} .
+        docker tag yourusername/yourapp:${{ github.sha }} yourusername/yourapp:latest
+
+    # Step 5: Push Docker image to DockerHub
+    - name: Push Docker image
+      run: |
+        docker push yourusername/yourapp:${{ github.sha }}
+        docker push yourusername/yourapp:latest
+
+    # Step 6: (Optional) Deploy your app (e.g., to a cloud service or server)
+    # You can add a deploy step if necessary, depending on where you are deploying your app.
+    # For example, deploying to AWS, GCP, Heroku, etc.
