--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,45 +1,32 @@
-name: Build and Deploy Docker Image
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
-      - main  # Trigger CI/CD on push to main branch
-  pull_request:
-    branches:
-      - main  # Trigger CI/CD on pull requests to the main branch
+      - main  # Trigger when changes are pushed to the main branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    # Step 1: Checkout the repository code
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      # Step 2: Set up Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+    # Step 2: Log in to DockerHub
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 3: Log in to DockerHub
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    # Step 3: Build the Docker image
+    - name: Build Docker image
+      run: |
+        docker build -t yassineamri/face_recognition:latest .
 
-      # Step 4: Build Docker image
-      - name: Build Docker image
-        run: |
-          docker build -t yourusername/yourapp:${{ github.sha }} .
-          docker tag yourusername/yourapp:${{ github.sha }} yourusername/yourapp:latest
-
-      # Step 5: Push Docker image to DockerHub
-      - name: Push Docker image
-        run: |
-          docker push yourusername/yourapp:${{ github.sha }}
-          docker push yourusername/yourapp:latest
-
-      # Step 6: (Optional) Run tests (if you have any tests for your app)
-      # Step 7: (Optional) Deploy your app (e.g., to a cloud service or server)
-      # You can add a deploy step if necessary, depending on where you are deploying your app.
+    # Step 4: Push the image to DockerHub
+    - name: Push Docker image
+      run: |
+        docker push yassineamri/face_recognition:latest
